Fix spacing in display view.

--- a/src/Bard.Fra.Web/ClientApp/src/app/pages/editor-page/editor-page.component.less
+++ b/src/Bard.Fra.Web/ClientApp/src/app/pages/editor-page/editor-page.component.less
@@ -38,8 +38,13 @@
 
 .verse {
   margin-bottom: 0px;
+  display: flex;
 }
 
 .strophe {
   margin-bottom: 16px;
+}
+
+.punct-segment {
+  white-space: pre-wrap;
 }
