--- a/src/Bard.Fra.Web/ClientApp/src/app/pages/editor-page/word-part/word-part.component.less
+++ b/src/Bard.Fra.Web/ClientApp/src/app/pages/editor-page/word-part/word-part.component.less
@@ -1,8 +1,6 @@
 .word-part {
   cursor: pointer;
   border-radius: 3px;
-  padding-left: 1px;
-  padding-right: 1px;
 }
 
 .word-part.hover {
